correction adresse mail

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
             <section id="contact">
                 <h2>Contact</h2>
-                <p>Pour échanger : <a href="mailto:contact@marcgehring.fr">contact@marcgehring.fr</a> ou <a href="https://linkedin.com/in/marcgehring" target="_blank">LinkedIn</a>.</p>
+                <p>Pour échanger : <a href="mailto:marcwgehring@gmail.com">contact@marcgehring.fr</a> ou <a href="https://linkedin.com/in/marcgehring" target="_blank">LinkedIn</a>.</p>
             </section>
         </main>
 
