--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
             <section id="a-propos" class="fade-in">
                 <h2>À propos</h2>
                 <p>
-                    Journaliste depuis plus de 20 ans, décrit comme autonome, enthousiaste et rigoureux. Ma carrière s'est principalement construite au sein du <strong>Groupe M6</strong>, où j'ai couvert des sujets variés pour des émissions phares comme <em>Capital</em> et <em>66 Minutes</em>.
+                    Journaliste depuis plus de 25 ans, décrit comme autonome, enthousiaste et rigoureux. Ma carrière s'est principalement construite au sein du <strong>Groupe M6</strong>, où j'ai couvert des sujets variés pour des émissions phares comme <em>Capital</em> et <em>66 Minutes</em>.
                 </p>
                 <p>
-                    Passionné par les mutations de notre monde, je me spécialise aujourd'hui dans l'impact de l'<strong>Intelligence Artificielle</strong>, en suivant une formation à l'ESCP. Mon objectif est de développer des outils innovants pour automatiser la veille et la création de contenu, alliant mon expertise journalistique aux nouvelles technologies.
+                    Passionné par les mutations de notre monde, je me spécialise aujourd'hui dans l'impact de l'<strong>Intelligence Artificielle</strong>, en suivant <a href="https://extension.escp.eu/#programme">une formation</a> à l'ESCP. Mon objectif est de développer des outils innovants pour automatiser la veille et la création de contenu, alliant mon expertise journalistique aux nouvelles technologies.
                 </p>
             </section>
 
@@ -50,14 +50,14 @@
                         <p>Réalisation de reportages de 30 minutes pour le magazine économique "Capital".</p>
                     </div>
                     <div class="experience-item">
-                        <h3>Journaliste Plurimédia</h3>
+                        <h3>Journaliste News</h3>
                         <p class="experience-meta">Groupe M6 | Neuilly-sur-Seine | oct. 2005 - janv. 2019 (13 ans 4 mois)</p>
-                        <p>Reportages pour les journaux télévisés (12h45 & 19h45). Inclut une mission comme envoyé spécial en Ukraine.</p>
+                        <p>Reportages et duplex pour les journaux télévisés (12h45 & 19h45). Inclut de nombreuses missions comme envoyé spécial (Ukraine, USA, Brésil, Israël/Palestine, etc.)</p>
                     </div>
                      <div class="experience-item">
                         <h3>Journaliste Freelance</h3>
                         <p class="experience-meta">TF1 le Groupe | Bordeaux | 2000 - 2005 (5 ans)</p>
-                        <p>Reportages en tant que journaliste indépendant pour le groupe TF1.</p>
+                        <p>Reportages en tant que journaliste pour le groupe TF1 (13h-20h, LCI).</p>
                     </div>
                 </div>
             </section>
@@ -66,10 +66,10 @@
                 <h2>Publications</h2>
                  <div class="experience-item">
                     <h3>Co-auteur de livres</h3>
-                    <p class="experience-meta">Éditions diverses</p>
+                    <p class="experience-meta">Éditions Sud-Ouest</p>
                     <ul>
-                        <li><em>Connaître le Poitou</em> (2005)</li>
-                        <li><em>La Charente-Maritime à vélo</em> (photographies et texte)</li>
+                        <li><em>Connaître le Poitou</em> (2005)</li> Toujours disponible, <a href=" https://www.amazon.fr/Conna%C3%AEtre-Poitou-Fanny-Bross/dp/287901610X">ici</a>
+                        <li><em>La Charente-Maritime à vélo</em> (photographies et texte)</li> Toujours disponible, <a href="https://www.amazon.fr/Charente-Maritime-%C3%A0-v%C3%A9lo-Fanny-Bross/dp/2879016843/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=154PFT3X2D1LB&dib=eyJ2IjoiMSJ9.CWkmBBsM_tqdHcMVGRMBZirYfKf7gidAeiJWuOIIWrc7wbr-8MR9Rk_iLSGlp7sdT_tj7pxHWfVz_9UsrQUKa7Hmwp70LqgjdiwKX2yZgqbYvYvvBW0x0_-VQe_E-Tz-.DiNVxgXb5CnLKNhWpyI2OGo2tnm2nnaRwKUS8U8kI8g&dib_tag=se&keywords=la+charente+maritime+a+velo&qid=1758879502&s=books&sprefix=la+charente+maritime+a+velo%2Cstripbooks%2C64&sr=1-1">ici</a>
                     </ul>
                 </div>
             </section>
