--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
                 <h2>Publications</h2>
                  <div class="experience-item">
                     <h3>Co-auteur de livres</h3>
-                    <p class="experience-meta">Éditions Sud-Ouest</p>
+                    <p class="experience-meta">Éditions Sud-Ouest ; (photographies et texte)</p>
                     <ul>
                         <li><em>Connaître le Poitou</em> (2005)</li> Toujours disponible, <a href=" https://www.amazon.fr/Conna%C3%AEtre-Poitou-Fanny-Bross/dp/287901610X">ici</a>
-                        <li><em>La Charente-Maritime à vélo</em> (photographies et texte)</li> Toujours disponible, <a href="https://www.amazon.fr/Charente-Maritime-%C3%A0-v%C3%A9lo-Fanny-Bross/dp/2879016843/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=154PFT3X2D1LB&dib=eyJ2IjoiMSJ9.CWkmBBsM_tqdHcMVGRMBZirYfKf7gidAeiJWuOIIWrc7wbr-8MR9Rk_iLSGlp7sdT_tj7pxHWfVz_9UsrQUKa7Hmwp70LqgjdiwKX2yZgqbYvYvvBW0x0_-VQe_E-Tz-.DiNVxgXb5CnLKNhWpyI2OGo2tnm2nnaRwKUS8U8kI8g&dib_tag=se&keywords=la+charente+maritime+a+velo&qid=1758879502&s=books&sprefix=la+charente+maritime+a+velo%2Cstripbooks%2C64&sr=1-1">ici</a>
+                        <li><em>La Charente-Maritime à vélo</em> </li> Toujours disponible, <a href="https://www.amazon.fr/Charente-Maritime-%C3%A0-v%C3%A9lo-Fanny-Bross/dp/2879016843/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=154PFT3X2D1LB&dib=eyJ2IjoiMSJ9.CWkmBBsM_tqdHcMVGRMBZirYfKf7gidAeiJWuOIIWrc7wbr-8MR9Rk_iLSGlp7sdT_tj7pxHWfVz_9UsrQUKa7Hmwp70LqgjdiwKX2yZgqbYvYvvBW0x0_-VQe_E-Tz-.DiNVxgXb5CnLKNhWpyI2OGo2tnm2nnaRwKUS8U8kI8g&dib_tag=se&keywords=la+charente+maritime+a+velo&qid=1758879502&s=books&sprefix=la+charente+maritime+a+velo%2Cstripbooks%2C64&sr=1-1">ici</a>
                     </ul>
                 </div>
             </section>
@@ -85,7 +85,7 @@
                     <div class="experience-item">
                         <h3>Journalisme</h3>
                         <p class="experience-meta">CFPJ | Montpellier | 1997 - 1998</p>
-                        <p>Formation initiale aux métiers du journalisme.</p>
+                        <p>Formation en alternance aux métiers du journalisme, à TLM : Télé Lyon Métropole.</p>
                     </div>
                 </div>
             </section>
@@ -98,6 +98,7 @@
                         <ul class="skills-list">
                             <li>Journalisme d'investigation</li>
                             <li>Reportage TV (Capital, 66 Minutes)</li>
+                            <li>Prises de vue (XDCAM, Sony FX6, Sony FX3, iPhone 16 pro MAX, Insta 360)</li>
                             <li>Storytelling & Rédaction</li>
                             <li>Montage Vidéo (Avid, Final Cut)</li>
                             <li>Photographie</li>
@@ -106,7 +107,7 @@
                     <div class="skills-category">
                         <h3>Digital & Technologie</h3>
                         <ul class="skills-list">
-                            <li>Prompt Engineering</li>
+                            <li>Prompt Engineering, en cours de formation</li>
                             <li>Intelligence Artificielle (Veille & Application)</li>
                             <li>Développement économique</li>
                             <li>Sciences économiques</li>
@@ -118,9 +119,9 @@
 
             <section id="contact" class="fade-in">
                 <h2>Contact</h2>
-                <p>Pour toute question ou proposition de collaboration, n'hésitez pas à me contacter.</p>
+                <p>N'hésitez pas à me contacter.</p>
                 <p class="contact-links">
-                    <a href="mailto:contact@marcgehring.fr" class="button">Email</a>
+                    <a href="mailto:marcwgehring@gmail.fr" class="button">Email</a>
                     <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer" class="button">LinkedIn</a>
                 </p>
             </section>
