--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
         <nav>
             <a href="#a-propos">À propos</a>
             <a href="#experience">Expérience</a>
+            <a href="#projets">Projets</a>
+            <a href="#publications">Publications</a>
             <a href="#formation">Formation</a>
             <a href="#competences">Compétences</a>
             <a href="#contact">Contact</a>
@@ -32,59 +34,83 @@
                     Journaliste depuis plus de 25 ans, décrit comme autonome, enthousiaste et rigoureux. Ma carrière s'est principalement construite au sein du <strong>Groupe M6</strong>, où j'ai couvert des sujets variés pour des émissions phares comme <em>Capital</em> et <em>66 Minutes</em>.
                 </p>
                 <p>
-                    Passionné par les mutations de notre monde, je me spécialise aujourd'hui dans l'impact de l'<strong>Intelligence Artificielle</strong>, en suivant <a href="https://extension.escp.eu/#programme">une formation</a> à l'ESCP. Mon objectif est de développer des outils innovants pour automatiser la veille et la création de contenu, alliant mon expertise journalistique aux nouvelles technologies.
+                    Passionné par les mutations de notre monde, je me spécialise aujourd'hui dans l'impact de l'<strong>Intelligence Artificielle</strong>, en suivant <a href="#formation">une formation</a> à l'ESCP. Mon objectif est de développer des outils innovants pour automatiser la veille et la création de contenu, alliant mon expertise journalistique aux nouvelles technologies.
                 </p>
             </section>
 
             <section id="experience" class="fade-in">
                 <h2>Expérience Professionnelle</h2>
-                <div class="experience-list">
-                    <div class="experience-item">
+                <div class="card-list">
+                    <div class="card-item">
                         <h3>Grand Reporter - 66 Minutes</h3>
-                        <p class="experience-meta">Groupe M6 | Neuilly-sur-Seine | sept. 2024 - aujourd'hui</p>
+                        <p class="card-meta">Groupe M6 | Neuilly-sur-Seine | sept. 2024 - aujourd'hui</p>
                         <p>Reportages pour l'émission d'actualité "66 Minutes".</p>
                     </div>
-                    <div class="experience-item">
+                    <div class="card-item">
                         <h3>Grand Reporter - Capital</h3>
-                        <p class="experience-meta">Groupe M6 | Neuilly-sur-Seine | janv. 2019 - oct. 2024 (5 ans 10 mois)</p>
+                        <p class="card-meta">Groupe M6 | Neuilly-sur-Seine | janv. 2019 - oct. 2024 (5 ans 10 mois)</p>
                         <p>Réalisation de reportages de 30 minutes pour le magazine économique "Capital".</p>
                     </div>
-                    <div class="experience-item">
+                    <div class="card-item">
                         <h3>Journaliste News</h3>
-                        <p class="experience-meta">Groupe M6 | Neuilly-sur-Seine | oct. 2005 - janv. 2019 (13 ans 4 mois)</p>
+                        <p class="card-meta">Groupe M6 | Neuilly-sur-Seine | oct. 2005 - janv. 2019 (13 ans 4 mois)</p>
                         <p>Reportages et duplex pour les journaux télévisés (12h45 & 19h45). Inclut de nombreuses missions comme envoyé spécial (Ukraine, USA, Brésil, Israël/Palestine, etc.)</p>
                     </div>
-                     <div class="experience-item">
+                     <div class="card-item">
                         <h3>Journaliste Freelance</h3>
-                        <p class="experience-meta">TF1 le Groupe | Bordeaux | 2000 - 2005 (5 ans)</p>
+                        <p class="card-meta">TF1 le Groupe | Bordeaux | 2000 - 2005 (5 ans)</p>
                         <p>Reportages en tant que journaliste pour le groupe TF1 (13h-20h, LCI).</p>
                     </div>
                 </div>
             </section>
             
+            <section id="projets" class="fade-in">
+                <h2>Projets & Portfolio</h2>
+                <div class="card-list">
+                    <div class="card-item">
+                        <div class="card-header">
+                            <h3>Veille Média IA</h3>
+                            <span class="status-badge in-progress">En cours</span>
+                        </div>
+                        <p class="card-meta">Projet personnel | Python, API GPT-4, NLP</p>
+                        <p>Développement d'un outil qui scanne en continu un large éventail de sources pour détecter les signaux faibles et les tendances émergentes. L'outil génère des synthèses automatisées et des alertes pour les journalistes.</p>
+                    </div>
+                    <div class="card-item">
+                         <div class="card-header">
+                            <h3>Générateur d'Angles de Reportage</h3>
+                            <span class="status-badge completed">Terminé</span>
+                        </div>
+                        <p class="card-meta">Projet de formation ESCP | Prompt Engineering, LangChain</p>
+                        <p>Création d'un système basé sur des LLMs pour aider les rédacteurs à trouver des angles de reportage originaux. En fournissant un sujet de base, l'outil propose des pistes d'investigation, des questions pertinentes et des angles sous-explorés.</p>
+                    </div>
+                </div>
+            </section>
+
             <section id="publications" class="fade-in">
                 <h2>Publications</h2>
-                 <div class="experience-item">
-                    <h3>Co-auteur de livres</h3>
-                    <p class="experience-meta">Éditions Sud-Ouest ; (photographies et texte)</p>
-                    <ul>
-                        <li><em>Connaître le Poitou</em> (2005)</li> Toujours disponible, <a href=" https://www.amazon.fr/Conna%C3%AEtre-Poitou-Fanny-Bross/dp/287901610X">ici</a>
-                        <li><em>La Charente-Maritime à vélo</em> </li> Toujours disponible, <a href="https://www.amazon.fr/Charente-Maritime-%C3%A0-v%C3%A9lo-Fanny-Bross/dp/2879016843/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=154PFT3X2D1LB&dib=eyJ2IjoiMSJ9.CWkmBBsM_tqdHcMVGRMBZirYfKf7gidAeiJWuOIIWrc7wbr-8MR9Rk_iLSGlp7sdT_tj7pxHWfVz_9UsrQUKa7Hmwp70LqgjdiwKX2yZgqbYvYvvBW0x0_-VQe_E-Tz-.DiNVxgXb5CnLKNhWpyI2OGo2tnm2nnaRwKUS8U8kI8g&dib_tag=se&keywords=la+charente+maritime+a+velo&qid=1758879502&s=books&sprefix=la+charente+maritime+a+velo%2Cstripbooks%2C64&sr=1-1">ici</a>
-                    </ul>
+                 <div class="card-list">
+                    <div class="card-item">
+                        <h3>Co-auteur de livres</h3>
+                        <p class="card-meta">Éditions Sud-Ouest (photographies et texte)</p>
+                        <ul>
+                            <li><em>Connaître le Poitou</em> (2005) - Toujours disponible, <a href="#" target="_blank" rel="noopener noreferrer">ici</a></li>
+                            <li><em>La Charente-Maritime à vélo</em> - Toujours disponible, <a href="#" target="_blank" rel="noopener noreferrer">ici</a></li>
+                        </ul>
+                    </div>
                 </div>
             </section>
 
             <section id="formation" class="fade-in">
                 <h2>Formation</h2>
-                <div class="experience-list">
-                    <div class="experience-item">
+                <div class="card-list">
+                    <div class="card-item">
                         <h3>IA et Automatisation</h3>
-                        <p class="experience-meta">ESCP Business School | Paris | 2025 (en cours)</p>
+                        <p class="card-meta">ESCP Business School | Paris | 2025 (en cours)</p>
                         <p>Certification "Piloter la transformation digitale avec l’IA".</p>
                     </div>
-                    <div class="experience-item">
+                    <div class="card-item">
                         <h3>Journalisme</h3>
-                        <p class="experience-meta">CFPJ | Montpellier | 1997 - 1998</p>
+                        <p class="card-meta">CFPJ | Montpellier | 1997 - 1998</p>
                         <p>Formation en alternance aux métiers du journalisme, à TLM : Télé Lyon Métropole.</p>
                     </div>
                 </div>
@@ -98,7 +124,7 @@
                         <ul class="skills-list">
                             <li>Journalisme d'investigation</li>
                             <li>Reportage TV (Capital, 66 Minutes)</li>
-                            <li>Prises de vue (XDCAM, Sony FX6, Sony FX3, iPhone 16 pro MAX, Insta 360)</li>
+                            <li>Prises de vue (XDCAM, Sony FX6, FX3, iPhone 16 Pro Max, Insta 360)</li>
                             <li>Storytelling & Rédaction</li>
                             <li>Montage Vidéo (Avid, Final Cut)</li>
                             <li>Photographie</li>
@@ -107,7 +133,7 @@
                     <div class="skills-category">
                         <h3>Digital & Technologie</h3>
                         <ul class="skills-list">
-                            <li>Prompt Engineering, en cours de formation</li>
+                            <li>Prompt Engineering (en cours de formation)</li>
                             <li>Intelligence Artificielle (Veille & Application)</li>
                             <li>Développement économique</li>
                             <li>Sciences économiques</li>
@@ -121,7 +147,7 @@
                 <h2>Contact</h2>
                 <p>N'hésitez pas à me contacter.</p>
                 <p class="contact-links">
-                    <a href="mailto:marcwgehring@gmail.fr" class="button">Email</a>
+                    <a href="mailto:contact@marcgehring.fr" class="button">Email</a>
                     <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer" class="button">LinkedIn</a>
                 </p>
             </section>
