--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marc Gehring - Journaliste & Explorateur Digital</title>
+    <!-- Ajout du Favicon TV -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📺</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lora:wght@400;700&display=swap" rel="stylesheet">
@@ -29,7 +31,7 @@
 
         <main>
             <section id="a-propos" class="fade-in">
-                <h2>À propos</h2>
+                <h2>À propos ✍️</h2>
                 <p>
                     Journaliste depuis plus de 25 ans, décrit comme autonome, enthousiaste et rigoureux. Ma carrière s'est principalement construite au sein du <strong>Groupe M6</strong>, où j'ai couvert des sujets variés pour des émissions phares comme <em>Capital</em> et <em>66 Minutes</em>.
                 </p>
@@ -39,7 +41,7 @@
             </section>
 
             <section id="experience" class="fade-in">
-                <h2>Expérience Professionnelle</h2>
+                <h2>Expérience Professionnelle 💼</h2>
                 <div class="card-list">
                     <div class="card-item">
                         <h3>Grand Reporter - 66 Minutes</h3>
@@ -65,15 +67,15 @@
             </section>
             
             <section id="projets" class="fade-in">
-                <h2>Projets & Portfolio</h2>
+                <h2>Projets & Portfolio 🚀</h2>
                 <div class="card-list">
                     <div class="card-item">
                         <div class="card-header">
-                            <h3>Veille Média IA</h3>
-                            <span class="status-badge in-progress">En cours</span>
+                            <h3><a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_ Bot</a></h3>
+                            <span class="status-badge in-progress">Actif</span>
                         </div>
-                        <p class="card-meta">Projet personnel | Python, API GPT-4, NLP</p>
-                        <p>Développement d'un outil qui scanne en continu un large éventail de sources pour détecter les signaux faibles et les tendances émergentes. L'outil génère des synthèses automatisées et des alertes pour les journalistes.</p>
+                        <p class="card-meta">Projet personnel | Python, API X, Intelligence Artificielle</p>
+                        <p>ArtMomentum_ est un bot intelligent et automatisé conçu pour partager la beauté de l'art sur les réseaux sociaux. Utilisant Python et l'IA, il publie quotidiennement des œuvres d'art, enrichies d'informations pertinentes et d'anecdotes captivantes, afin de créer une communauté engagée autour de l'histoire de l'art.</p>
                     </div>
                     <div class="card-item">
                          <div class="card-header">
@@ -87,21 +89,21 @@
             </section>
 
             <section id="publications" class="fade-in">
-                <h2>Publications</h2>
+                <h2>Publications 📚</h2>
                  <div class="card-list">
                     <div class="card-item">
                         <h3>Co-auteur de livres</h3>
                         <p class="card-meta">Éditions Sud-Ouest (photographies et texte)</p>
                         <ul>
-                            <li><em>Connaître le Poitou</em> (2005) - Toujours disponible, <a href="#" target="_blank" rel="noopener noreferrer">ici</a></li>
-                            <li><em>La Charente-Maritime à vélo</em> - Toujours disponible, <a href="#" target="_blank" rel="noopener noreferrer">ici</a></li>
+                            <li><em>Connaître le Poitou</em> (2005) - Toujours disponible, <a href="https://www.editions-sudouest.com/livres/poitou-charentes-connaitre" target="_blank" rel="noopener noreferrer">ici</a></li>
+                            <li><em>La Charente-Maritime à vélo</em> - Toujours disponible, <a href="https://www.editions-sudouest.com/livres/charente-maritime-a-velo-la" target="_blank" rel="noopener noreferrer">ici</a></li>
                         </ul>
                     </div>
                 </div>
             </section>
 
             <section id="formation" class="fade-in">
-                <h2>Formation</h2>
+                <h2>Formation 🎓</h2>
                 <div class="card-list">
                     <div class="card-item">
                         <h3>IA et Automatisation</h3>
@@ -117,7 +119,7 @@
             </section>
 
             <section id="competences" class="fade-in">
-                <h2>Compétences</h2>
+                <h2>Compétences 🎯</h2>
                 <div class="skills-container">
                     <div class="skills-category">
                         <h3>Journalisme & Médias</h3>
@@ -144,11 +146,12 @@
             </section>
 
             <section id="contact" class="fade-in">
-                <h2>Contact</h2>
+                <h2>Contact 📧</h2>
                 <p>N'hésitez pas à me contacter.</p>
                 <p class="contact-links">
                     <a href="mailto:contact@marcgehring.fr" class="button">Email</a>
                     <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer" class="button">LinkedIn</a>
+                    <a href="https://x.com/marcgehring" target="_blank" rel="noopener noreferrer" class="button">X (Twitter)</a>
                 </p>
             </section>
         </main>
