ajout site malaisie

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Marc Gehring - Journaliste & Explorateur Digital</title>
-    <!-- Ajout du Favicon TV -->
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>📺</text></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,6 +42,7 @@
             <section id="experience" class="fade-in">
                 <h2>Expérience Professionnelle 💼</h2>
                 <div class="card-list">
+                    <!-- Cartes d'expérience existantes... -->
                     <div class="card-item">
                         <h3>Grand Reporter - 66 Minutes</h3>
                         <p class="card-meta">Groupe M6 | Neuilly-sur-Seine | sept. 2024 - aujourd'hui</p>
@@ -69,13 +69,24 @@
             <section id="projets" class="fade-in">
                 <h2>Projets & Portfolio 🚀</h2>
                 <div class="card-list">
+                    <!-- NOUVEAU PROJET AJOUTÉ ICI -->
+                    <div class="card-item">
+                        <div class="card-header">
+                            <h3><a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">App Voyage Malaisie & Singapour</a></h3>
+                            <span class="status-badge live">Live</span>
+                        </div>
+                        <p class="card-meta">HTML, CSS, JavaScript (ES6 Modules), Leaflet.js, API OpenWeatherMap</p>
+                        <p>Application web interactive présentant un itinéraire de 20 jours avec carte Leaflet, widgets (météo, horloges) et fiches d'information. Construite en JavaScript moderne sans framework, elle est pilotée par un fichier JSON, démontrant une architecture modulaire.</p>
+                    </div>
+                    <!-- FIN DU NOUVEAU PROJET -->
+
                     <div class="card-item">
                         <div class="card-header">
                             <h3><a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_ Bot</a></h3>
-                            <span class="status-badge in-progress">Actif</span>
+                            <span class="status-badge actif">Actif</span>
                         </div>
                         <p class="card-meta">Projet personnel | Python, API X, Intelligence Artificielle</p>
-                        <p>ArtMomentum_ est un bot intelligent et automatisé conçu pour partager la beauté de l'art sur les réseaux sociaux. Utilisant Python et l'IA, il publie quotidiennement des œuvres d'art, enrichies d'informations pertinentes et d'anecdotes captivantes, afin de créer une communauté engagée autour de l'histoire de l'art.</p>
+                        <p>ArtMomentum_ est un bot intelligent et automatisé conçu pour partager la beauté de l'art sur les réseaux sociaux. Utilisant Python et l'IA, il publie quotidiennement des œuvres d'art, enrichies d'informations pertinentes et d'anecdotes captivantes.</p>
                     </div>
                     <div class="card-item">
                          <div class="card-header">
@@ -83,7 +94,7 @@
                             <span class="status-badge completed">Terminé</span>
                         </div>
                         <p class="card-meta">Projet de formation ESCP | Prompt Engineering, LangChain</p>
-                        <p>Création d'un système basé sur des LLMs pour aider les rédacteurs à trouver des angles de reportage originaux. En fournissant un sujet de base, l'outil propose des pistes d'investigation, des questions pertinentes et des angles sous-explorés.</p>
+                        <p>Création d'un système basé sur des LLMs pour aider les rédacteurs à trouver des angles de reportage originaux à partir d'un sujet de base.</p>
                     </div>
                 </div>
             </section>
@@ -105,6 +116,7 @@
             <section id="formation" class="fade-in">
                 <h2>Formation 🎓</h2>
                 <div class="card-list">
+                    <!-- Cartes de formation existantes... -->
                     <div class="card-item">
                         <h3>IA et Automatisation</h3>
                         <p class="card-meta">ESCP Business School | Paris | 2025 (en cours)</p>
@@ -121,6 +133,7 @@
             <section id="competences" class="fade-in">
                 <h2>Compétences 🎯</h2>
                 <div class="skills-container">
+                    <!-- Compétences existantes... -->
                     <div class="skills-category">
                         <h3>Journalisme & Médias</h3>
                         <ul class="skills-list">
