--- a/index.html
+++ b/index.html
@@ -72,29 +72,37 @@
                     <!-- NOUVEAU PROJET AJOUTÉ ICI -->
                     <div class="card-item">
                         <div class="card-header">
-                            <h3><a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">App Voyage Malaisie & Singapour</a></h3>
-                            <span class="status-badge live">Live</span>
+                            <h3><a href="https://promptsmg-663481645724.us-west1.run.app/" target="_blank" rel="noopener noreferrer">PromptsMG</a></h3>
+                            <div class="badge-group">
+                                <span class="status-badge live">Live</span>
+                                <span class="status-badge private">Privé</span>
+                            </div>
                         </div>
-                        <p class="card-meta">HTML, CSS, JavaScript (ES6 Modules), Leaflet.js, API OpenWeatherMap</p>
-                        <p>Application web interactive présentant un itinéraire de 20 jours avec carte Leaflet, widgets (météo, horloges) et fiches d'information. Construite en JavaScript moderne sans framework, elle est pilotée par un fichier JSON, démontrant une architecture modulaire.</p>
+                        <p class="card-meta">Google Cloud Run, Gemini API, Google Auth, JavaScript</p>
+                        <p>Application web sécurisée pour centraliser, organiser et optimiser des prompts. Elle intègre une bibliothèque personnelle, un éditeur avec variables dynamiques, et un assistant de création propulsé par l'IA (Gemini) pour générer des prompts sur-mesure.</p>
                     </div>
                     <!-- FIN DU NOUVEAU PROJET -->
 
                     <div class="card-item">
                         <div class="card-header">
+                            <h3><a href="https://marcoco27.github.io/voyage-malaisie/" target="_blank" rel="noopener noreferrer">App Voyage Malaisie & Singapour</a></h3>
+                            <div class="badge-group">
+                                <span class="status-badge live">Live</span>
+                            </div>
+                        </div>
+                        <p class="card-meta">HTML, CSS, JavaScript (ES6 Modules), Leaflet.js, API OpenWeatherMap</p>
+                        <p>Application web interactive présentant un itinéraire de 20 jours avec carte Leaflet, widgets (météo, horloges) et fiches d'information. Construite en JavaScript moderne sans framework, elle est pilotée par un fichier JSON.</p>
+                    </div>
+
+                    <div class="card-item">
+                        <div class="card-header">
                             <h3><a href="https://x.com/ArtMomentum_" target="_blank" rel="noopener noreferrer">ArtMomentum_ Bot</a></h3>
-                            <span class="status-badge actif">Actif</span>
+                            <div class="badge-group">
+                                <span class="status-badge actif">Actif</span>
+                            </div>
                         </div>
                         <p class="card-meta">Projet personnel | Python, API X, Intelligence Artificielle</p>
-                        <p>ArtMomentum_ est un bot intelligent et automatisé conçu pour partager la beauté de l'art sur les réseaux sociaux. Utilisant Python et l'IA, il publie quotidiennement des œuvres d'art, enrichies d'informations pertinentes et d'anecdotes captivantes.</p>
-                    </div>
-                    <div class="card-item">
-                         <div class="card-header">
-                            <h3>Générateur d'Angles de Reportage</h3>
-                            <span class="status-badge completed">Terminé</span>
-                        </div>
-                        <p class="card-meta">Projet de formation ESCP | Prompt Engineering, LangChain</p>
-                        <p>Création d'un système basé sur des LLMs pour aider les rédacteurs à trouver des angles de reportage originaux à partir d'un sujet de base.</p>
+                        <p>Bot intelligent et automatisé qui partage quotidiennement des œuvres d'art sur les réseaux sociaux, enrichies d'informations pertinentes et d'anecdotes captivantes, afin de créer une communauté engagée autour de l'histoire de l'art.</p>
                     </div>
                 </div>
             </section>
