--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <h2>Contact 📧</h2>
                 <p>N'hésitez pas à me contacter.</p>
                 <p class="contact-links">
-                    <a href="mailto:contact@marcgehring.fr" class="button">Email</a>
+                    <a href="mailto:marcwgehring@gmail.com" class="button">Email</a>
                     <a href="https://www.linkedin.com/in/marc-gehring-6691436b" target="_blank" rel="noopener noreferrer" class="button">LinkedIn</a>
                     <a href="https://x.com/marcgehring" target="_blank" rel="noopener noreferrer" class="button">X (Twitter)</a>
                 </p>
